--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "astro": "^4.4.5",
     "astro-robots-txt": "1.0.0",
     "firebase": "^10.12.2",
+    "firebase-tools": "^13.11.2",
     "tailwindcss": "3.4.1",
     "typescript": "5.3.3"
   }
